RESOLVED FIXED177971
Web Inspector: EventLoop::cycle() should not send nil NSEvents
https://bugs.webkit.org/show_bug.cgi?id=177971
Summary Web Inspector: EventLoop::cycle() should not send nil NSEvents
Blaze Burg
Reported 2017-10-05 15:12:40 PDT
>:(
Attachments
Patch (1.91 KB, patch)
2017-10-05 15:17 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2017-10-05 15:12:52 PDT
Blaze Burg
Comment 2 2017-10-05 15:17:57 PDT
Joseph Pecoraro
Comment 3 2017-10-05 15:33:19 PDT
Comment on attachment 322924 [details] Patch r=me
WebKit Commit Bot
Comment 4 2017-10-05 16:02:55 PDT
Comment on attachment 322924 [details] Patch Clearing flags on attachment: 322924 Committed r222940: <http://trac.webkit.org/changeset/222940>
WebKit Commit Bot
Comment 5 2017-10-05 16:02:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.