Web Inspector: EventLoop::cycle() should not send nil NSEvents https://bugs.webkit.org/show_bug.cgi?id=177971 <rdar://problem/20387399>

Reviewed by Joseph Pecoraro.

It is possible for the next matching event to be nil.
WebKit clients don't expect to be sent a nil NSEvent, so add a null check here.

* platform/mac/EventLoopMac.mm:
(WebCore::EventLoop::cycle):


Canonical link: https://commits.webkit.org/194213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222940 268f45cc-cd09-0410-ab3c-d52691b4dbfc